test/function/body_must_be_block.lox
// error: expect '{' before function body
fn f() 123
